Removing dark mode slider and features. Fixing URL link on post so that they now redirect to URL in question. Removing possibility of creating duplicate usernames with blank spaces.

--- a/src/styles/MainBody.css
+++ b/src/styles/MainBody.css
@@ -99,6 +99,7 @@
   min-width:0rem;
   text-align: left;
   margin-left:1rem;
+  margin-bottom:1rem;
 }
 
 .Main-Body-Card-Url, :active :hover :visited{
