--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -124,7 +124,7 @@
 
 /* Drop Down Menu */
 .Nav-Drop-Down-Menu{
-  min-height:7rem;
+  min-height:5rem;
   min-width:13rem;
   border:1px solid lightgray;
   position:absolute;
