--- a/src/styles/SelectedPost.css
+++ b/src/styles/SelectedPost.css
@@ -203,6 +203,7 @@
   width:80%;
   border:1px solid transparent;
   display:flex;
+  flex-direction: column;
   justify-content: left;
   background-color: white;
 }
